tests/Error/YS01xx/YS0111.ys
VAR x = 5 ! 6 # After the ! must be an equals --> !=